<resources>
    <string name="app_name">ThingsToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_today">Today</string>
    <string name="nav_alltasks">All Tasks</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_important">Important</string>
    <string name="nav_completed">Completed</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>

</resources>